--- a/style.css
+++ b/style.css
@@ -299,8 +299,7 @@ body.menu-open .main-screen {
 
 .file-input {
     width: 80px;
-    overflow: hidden; /* Hides the text near the img input button
-    /* display: none; */
+    overflow: hidden; /* Hides the text near the img input button */
 }
 
 /* Gallery */
